feat: added a mwe line graph
Added a minimal line graph to demonstrate that we can.

Closes #6

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,8 @@
 	border: solid 1px black;
 }
 .main {
-  display: flex;
-  flex-direction: row:
-  align-items: start;
+	display: flex;
+	flex-direction: row;
+	align-items: start;
+	flex-grow: 1;
 }
