--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,23 @@
 .App {
-	min-height: 100vh;
-	width: 100vw;
-	border: solid 1px black;
+	margin: 0;
 }
-.main {
-	display: flex;
-	flex-direction: row;
-	align-items: start;
-	flex-grow: 1;
+#main {
 	min-height: 500px;
+}
+#main.loading {
+	opacity: 0.25;
+	transition: opacity 200ms;
+	transition-delay: 200ms;
+}
+nav .active {
+	color: red;
+}
+nav .pending {
+	::before {
+		content: '...';
+	}
+}
+nav li {
+	display: inline;
+	margin: 0 5px;
 }
