feat: individual school information page
- Added routing through react-router
- Added individaul school information page with basic information.
  Eventually it should include all of the information that is available
  on the general pages, but specific to the individual school
- Upgraded school information list to link to individual school
  information page
- Added navigation menu which actually works

Closes #29

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,13 +1,7 @@
 .App {
-	min-height: 100vh;
-	width: 100vw;
-	border: solid 1px black;
+	margin: 0;
 }
 #main {
-	display: flex;
-	flex-direction: row;
-	align-items: start;
-	flex-grow: 1;
 	min-height: 500px;
 }
 #main.loading {
@@ -22,4 +16,8 @@ nav .pending {
 	::before {
 		content: '...';
 	}
+}
+nav li {
+	display: inline;
+	margin: 0 5px;
 }
