--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,48 +1,48 @@
 .App {
-	margin: 0;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 #main {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 #main.loading {
-	opacity: 0.25;
-	transition: opacity 200ms;
-	transition-delay: 200ms;
+  opacity: 0.25;
+  transition: opacity 200ms;
+  transition-delay: 200ms;
 }
 nav {
-	background-color: var(--primary-50);
-	border-radius: var(--basic-border-radius);
-	padding: calc(3 * var(--basic-distance));
+  background-color: var(--primary-50);
+  border-radius: var(--medium-border-radius);
+  padding: calc(3 * var(--basic-distance));
 }
 nav ul {
-	padding: 0;
-	display: inline-block;
-	list-style-type: none;
+  padding: 0;
+  display: inline-block;
+  list-style-type: none;
 }
 nav li {
-	display: inline;
-	margin: 0 calc(2 * var(--basic-distance));
+  display: inline;
+  margin: 0 calc(2 * var(--basic-distance));
 }
 nav a {
-	text-decoration: none;
-	color: inherit;
-	padding: var(--basic-distance);
-	border-radius: var(--basic-border-radius);
-	transition: background-color var(--medium-time);
+  text-decoration: none;
+  color: inherit;
+  padding: var(--basic-distance);
+  border-radius: var(--small-border-radius);
+  transition: background-color var(--medium-time);
 }
 nav a:hover {
-	background-color: var(--tertiary-colour);
+  background-color: var(--tertiary-colour);
 }
 nav .pending {
-	background-color: var(--tertiary-colour);
+  background-color: var(--tertiary-colour);
 }
 nav .active {
-	background-color: var(--secondary-colour);
+  background-color: var(--secondary-colour);
 }
